GNOME Bugzilla – Bug 797363
video-anc: Add unit tests and fix invalid reads in VBI parser
Last modified: 2018-11-01 17:33:16 UTC
See commit messages for details
Created attachment 374127 [details] [review] video-anc: Fix bounds checks when parsing VBI data We were reading more bytes than we allocated.
Created attachment 374128 [details] [review] video-anc: Add unit tests for VBI parsing
Created attachment 374129 [details] [review] decklinkvideosrc: Add support for extracing CEA608 according to S334-1 Annex A
Attachment 374127 [details] pushed as 4666444 - video-anc: Fix bounds checks when parsing VBI data Attachment 374128 [details] pushed as a1c1495 - video-anc: Add unit tests for VBI parsing
Attachment 374129 [details] pushed as 3d8a0b8 - decklinkvideosrc: Add support for extracing CEA608 according to S334-1 Annex A